<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="es.esy.vivekrajendran.myapp.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/emailInputLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email"
        app:errorEnabled="true"
        app:errorTextAppearance="@string/err_email"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:drawableStart="@drawable/ic_mail_outline_black_24px"
            android:drawablePadding="@dimen/drawable_padding"
            tools:ignore="LabelFor" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/passwordInputLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:errorTextAppearance="@string/err_password"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock_black_24px"
            android:drawablePadding="@dimen/drawable_padding"
            tools:ignore="LabelFor" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/forget_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/forget_password"
        app:layout_constraintRight_toRightOf="@+id/passwordInputLayout"
        app:layout_constraintLeft_toLeftOf="@+id/passwordInputLayout"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/subheading"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

    <Button
        android:text="@string/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        app:layout_constraintRight_toRightOf="@+id/forget_password"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/forget_password"
        app:layout_constraintLeft_toLeftOf="@+id/forget_password" />

    <Button
        android:text="@string/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/login"
        app:layout_constraintRight_toRightOf="@+id/login" />

</android.support.constraint.ConstraintLayout>
