<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.esy.vivekrajendran.myapp.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/reg_name_layout"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:hint="@string/reg_hint_name"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:id="@+id/reg_name"
                            android:inputType="textPersonName"
                            android:drawableStart="@drawable/ic_account_circle_black_24px"
                            android:drawablePadding="@dimen/drawable_padding"
                            tools:ignore="LabelFor" />
                        </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/reg_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reg_hint_email"
                    android:layout_marginTop="@dimen/activity_vertical_margin" >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:id="@+id/reg_email"
                        android:inputType="textEmailAddress"
                        android:drawableStart="@drawable/ic_mail_outline_black_24px"
                        android:drawablePadding="@dimen/drawable_padding"
                        tools:ignore="LabelFor" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/reg_pass_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reg_hint_password"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:id="@+id/reg_pass"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/ic_lock_black_24px"
                        android:drawablePadding="@dimen/drawable_padding"
                        tools:ignore="LabelFor" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reg_register"
                    android:text="@string/register"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/returning_user"
                    android:gravity="center"
                    android:textSize="@dimen/body"
                    android:id="@+id/reg_return"/>

          </LinearLayout>
        </ScrollView>
</android.support.design.widget.CoordinatorLayout>
